--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 of Simple CSS Waves-->
 
 <div class="header">
+<link rel = "stylesheet" href="styles.css">
 
 <!--Content before waves-->
 <div class="inner-header flex">
