--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My webpage</title>
   </head>
   <body>
-    <h1>Welcome to my page!</h1>
-    <p>This is some paragraph text.</p>
+    <h1>Welcome to my webpage!</h1>
+    <p>Hello, my name is Jane. This is my personal webpage.</p>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
   </body>
 </html>
