--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>My webpageee</title>
+      <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Welcome to my webpage!</h1>
