--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!--Hey! This is the original version
-of Simple CSS Waves-->
-
+<!DOCTYPE html>
+<html>
+<head>
+  <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">Publications</a>
+  <a href="#news">LinkedIn</a>
+  <a href="#news">Media</a>
+  <a href="#news">Resume</a>
+    </div>
+  </div> 
+</div>
 <div class="header">
-<link rel="stylesheet" href="styles.css">
 <!--Content before waves-->
 <div class="inner-header flex">
-
-<h1>Coming Soon</h1>
+<h1>Mojaghi</h1>
 </div>
 
 <!--Waves Container-->
@@ -33,3 +40,29 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 <div class="content flex">
 </div>
 <!--Content ends-->
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+</style>
+</head>
+</body>
